--- a/src/changes/announcement.vm
+++ b/src/changes/announcement.vm
@@ -16,11 +16,11 @@
 ## under the License.
 
 #set($relVersion=$announceParameters.releaseVersion)
-              Apache Log4j2 ${relVersion} RELEASE NOTES
+              Apache Log4j ${relVersion} RELEASE NOTES
 
-The ${developmentTeam} is pleased to announce the Log4j2 ${relVersion} release!
+The ${developmentTeam} is pleased to announce the Log4j ${relVersion} release!
 
-Apache Log4j2 ${relVersion} requires a minimum of Java 5 to build and run. Basic compatibility with
+Apache Log4j ${relVersion} requires a minimum of Java 5 to build and run. Basic compatibility with
 Log4j 1.x is provided through the log4j12-api component, however it does not implement some of the
 very implementation specific classes and methods. The package names and Maven groupId have been changed to
 org.apache.logging.log4j to avoid any conflicts with log4j 1.x.
