Change heading of project documentation for each component
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1364224 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/site/site.vm
+++ b/src/site/site.vm
@@ -312,12 +312,30 @@
                 #set ( $img = '<img class="imageLink"' + $src + $alt + $border + $width + $height + "/>" )
             ##
                 #if ( $position == "left" )
-                <h3>$img $menu.name</h3>
+                    #if ( $menu.name.equals("Project Documentation"))
+                        #if ( $docLabel )
+                            #set ( $menuName = $docLabel )
+                        #else
+                            #set ($menuName = $menu.name )
+                        #end
+                        <h3>$menuName</h3>
+                    #else
+                        <h3>$img $menu.name</h3>
+                    #end
                 #else
                 <h3>$menu.name $img</h3>
                 #end
             #else
-            <h3>$menu.name</h3>
+                #if ( $menu.name.equals("Project Documentation"))
+                    #if ( $docLabel )
+                        #set ( $menuName = $docLabel )
+                    #else
+                        #set ($menuName = $menu.name )
+                    #end
+                <h3>$menuName</h3>
+                #else
+                <h3>$menu.name</h3>
+                #end
             #end
         #end
         #if ( $menu.items && $menu.items.size() > 0 )
