--- a/src/site/xdoc/build.xml.vm
+++ b/src/site/xdoc/build.xml.vm
@@ -57,8 +57,65 @@
       </dependency>
     </dependecies>
             ]]></source>
+          <p>
+            As an alternative, users who always want to use the Log4j 2 implementation of the API may simply use
+            the combined jar.
+          </p>
+          <source><![CDATA[
+    <dependencies>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-combined</artifactId>
+        <version>${Log4jReleaseVersion}</version>
+      </dependency>
+    </dependecies>
+            ]]></source>
       </subsection>
-
+      <subsection name="Optional Components">
+        <p>
+          Log4j 2.x contains several optional components that can be included in an application.
+        </p>
+        <h4>Log4j 1.x</h4>
+        <p>If there are existing components that are written to use Log4j 1.x and it is desired to have this
+           logging routed to Log4j 2 then remove any log4j 1.x dependencies and add the following.
+        </p>
+          <source><![CDATA[
+    <dependencies>
+      <dependency>
+        <groupId>org.apache.logging.log4j.adapters</groupId>
+        <artifactId>log4j12-api</artifactId>
+        <version>${Log4jReleaseVersion}</version>
+      </dependency>
+    </dependecies>
+            ]]></source>
+          <h4>Apache Commons Logging</h4>
+          <p>Commons Logging is used in many components as a way of letting applications choose the specific
+             logging implementation. To route logging from those components into Log4j 2 include the
+             following dependency and do not remove the Commons Logging jar.
+          </p>
+          <source><![CDATA[
+    <dependencies>
+      <dependency>
+        <groupId>org.apache.logging.log4j.adapters</groupId>
+        <artifactId>log4j-jcl</artifactId>
+        <version>${Log4jReleaseVersion}</version>
+      </dependency>
+    </dependecies>
+            ]]></source>
+          <h4>SLF4J</h4>
+          <p>SLF4J is another popular logging API that may be bound to Log4j 2 by including the following
+             dependency along with the SLF4J dependencies.
+          </p>
+          <source><![CDATA[
+    <dependencies>
+      <dependency>
+        <groupId>org.apache.logging.log4j.adapters</groupId>
+        <artifactId>slf4j-impl</artifactId>
+        <version>${Log4jReleaseVersion}</version>
+      </dependency>
+    </dependecies>
+            ]]></source>
+      </subsection>
 		</section>
 	</body>
 </document>
