Remove combined sub-project. Rename slf4j-impl to log4j-slf4j-impl
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1405016 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/site/xdoc/build.xml.vm
+++ b/src/site/xdoc/build.xml.vm
@@ -57,19 +57,6 @@
       </dependency>
     </dependecies>
             ]]></source>
-          <p>
-            As an alternative, users who always want to use the Log4j 2 implementation of the API may simply use
-            the combined jar.
-          </p>
-          <source><![CDATA[
-    <dependencies>
-      <dependency>
-        <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>log4j-combined</artifactId>
-        <version>${Log4jReleaseVersion}</version>
-      </dependency>
-    </dependecies>
-            ]]></source>
       </subsection>
       <subsection name="Optional Components">
         <p>
@@ -110,7 +97,7 @@
     <dependencies>
       <dependency>
         <groupId>org.apache.logging.log4j.adapters</groupId>
-        <artifactId>slf4j-impl</artifactId>
+        <artifactId>log4j-slf4j-impl</artifactId>
         <version>${Log4jReleaseVersion}</version>
       </dependency>
     </dependecies>
