--- a/src/site/apt/download.apt.vm
+++ b/src/site/apt/download.apt.vm
@@ -49,7 +49,7 @@ Download Apache Log4j 2
 
 ---
 % gpg --import KEYS
-% gpg --verify log4j2-1.0-alpha1.tar.gz.asc
+% gpg --verify apache-log4j-${Log4jReleaseVersion}-bin.tar.gz.asc
 ---
 
     Apache Log4j 2 is signed by Ralph Goers  B3D8E1BA
