--- a/src/site/resources/css/site.css
+++ b/src/site/resources/css/site.css
@@ -22,6 +22,10 @@ div.clear hr { display: none; }
 --------------------------------- */
 li { line-height: 20px; }
 tt { font-family: Menlo, Monaco, "Courier New", monospace; font-size: 12px; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; padding: 3px 4px; color: #d14; background-color: #f7f7f9; border: 1px solid #e1e1e8; }
+dt { margin: 15px 0 5px 0; font-size: 1.2em }
+
+.big-red { font-weight: bold; color: #D14 }
+.big-green { font-weight: bold; color: green }
 
 .layout-table { width: 100%; }
 .sidebar { width: 250px; vertical-align: top; }
