--- a/src/site/xdoc/manual/layouts.xml.vm
+++ b/src/site/xdoc/manual/layouts.xml.vm
@@ -105,7 +105,11 @@ WARN  [main]: Message 2</pre>
             In the example above the conversion specifier <b>%-5p</b> means the priority of the logging event should
             be left justified to a width of five characters.
           </p>
-
+          <p>
+            If the pattern string does not contain a specifier to handle a Throwable being logged, parsing of the
+            pattern will act as if the "%xEx" specifier had be added to the end of the string. To suppress
+            formatting of the Throwable completely simply add "%ex{0}" as a specifier in the pattern string.
+          </p>
           <table>
             <tr>
               <th>Parameter Name</th>
@@ -271,9 +275,9 @@ WARN  [main]: Message 2</pre>
             </tr>
             <tr>
               <td align="center">
-                <b>ex</b>{["short"|"full"|depth]}<br />
-                <b>exception</b>{["short"|"full"|depth]}<br />
-                <b>throwable</b>{["short"|"full"|depth]}
+                <b>ex</b>{["none"|"short"|"full"|depth]}<br />
+                <b>exception</b>{["none"|"short"|"full"|depth]}<br />
+                <b>throwable</b>{["none"|"short"|"full"|depth]}
               </td>
               <td>
                 <p>Outputs the Throwable trace that has been bound to the LoggingEvent, by
@@ -282,7 +286,8 @@ WARN  [main]: Message 2</pre>
                   The throwable conversion word can be followed by an option in the form
                   <b>%throwable{short}</b>
                   which will only output the first line of the Throwable or <b>%throwable{n}</b> where
-                  the first n lines of the stacktrace will be printed.
+                  the first n lines of the stacktrace will be printed. Specifying <b>%throwable{none}</b>
+                  or <b>%throwable{0}</b> will suppress printing of the exception.
                 </p>
               </td>
             </tr>
@@ -571,9 +576,9 @@ WARN  [main]: Message 2</pre>
             </tr>
             <tr>
               <td align="center">
-                <b>rEx</b>["short"|"full"|depth],[filters(packages)}<br />
-                <b>rException</b>["short"|"full"|depth],[filters(packages)}<br />
-                <b>rThrowable</b>["short"|"full"|depth],[filters(packages)}
+                <b>rEx</b>["none"|"short"|"full"|depth],[filters(packages)}<br />
+                <b>rException</b>["none"|"short"|"full"|depth],[filters(packages)}<br />
+                <b>rThrowable</b>["none"|"short"|"full"|depth],[filters(packages)}
               </td>
               <td>
                 <p>The same as the %throwable conversion word but the stack trace is printed starting with the
@@ -584,7 +589,8 @@ WARN  [main]: Message 2</pre>
                   which will only output the first line of the Throwable or <b>%rEx{n}</b> where
                   the first n lines of the stacktrace will be printed. The conversion word can also be
                   followed by "filters(packages)" where packages is a list of package names that should
-                  be suppressed from stack traces.
+                  be suppressed from stack traces. Specifying <b>%rEx{none}</b>
+                  or <b>%rEx{0}</b> will suppress printing of the exception.
                 </p>
               </td>
             </tr>
@@ -776,9 +782,9 @@ WARN  [main]: Message 2</pre>
             </tr>
             <tr>
               <td align="center">
-                <b>xEx</b>{["short"|"full"|depth],[filters(packages)}<br />
-                <b>xException</b>["short"|"full"|depth],[filters(packages)}<br />
-                <b>xThrowable</b>["short"|"full"|depth],[filters(packages)}
+                <b>xEx</b>{"none"|"short"|"full"|depth],[filters(packages)}<br />
+                <b>xException</b>["none"|"short"|"full"|depth],[filters(packages)}<br />
+                <b>xThrowable</b>["none"|"short"|"full"|depth],[filters(packages)}
               </td>
               <td>
                 <p>The same as the %throwable conversion word but also includes class packaging information.
@@ -793,7 +799,8 @@ WARN  [main]: Message 2</pre>
                   which will only output the first line of the Throwable or <b>%xEx{n}</b> where
                   the first n lines of the stacktrace will be printed. The conversion word can also be
                   followed by "filters(packages)" where packages is a list of package names that should
-                  be suppressed from stack traces.
+                  be suppressed from stack traces. Specifying <b>%xEx{none}</b>
+                  or <b>%xEx{0}</b> will suppress printing of the exception.
                 </p>
               </td>
             </tr>
