--- a/src/site/xdoc/build.xml.vm
+++ b/src/site/xdoc/build.xml.vm
@@ -34,7 +34,8 @@
         </p>
         <p>
           Log4j 2.x uses Maven 2 or 3 as its build tool. To build Log4j simply run "mvn install" from the root
-          directory.
+          directory. Then to build the site, run "mvn site". To rebuild only what's changed and execute the tests, run "mvn test".
+		  To rebuild from scratch, add "clean", for example: "mvn clean test".
         </p>
       </subsection>
       <subsection name="Using In Applications">
