--- a/src/changes/announcement.vm
+++ b/src/changes/announcement.vm
@@ -16,14 +16,17 @@
 ## under the License.
 
 #set($relVersion=$announceParameters.releaseVersion)
+#set($relCount=$announceParameters.releaseCount)
               Apache Log4j ${relVersion} RELEASE NOTES
 
 The ${developmentTeam} is pleased to announce the Log4j ${relVersion} release!
 
-Apache Log4j ${relVersion} requires a minimum of Java 5 to build and run. Basic compatibility with
-Log4j 1.x is provided through the log4j-1.2-api component, however it does not implement some of the
-very implementation specific classes and methods. The package names and Maven groupId have been changed to
-org.apache.logging.log4j to avoid any conflicts with log4j 1.x.
+Apache log4j is a well known framework for logging application behavior. Log4j 2 is an upgrade to
+Log4j that provides significant improvements over its predecessor, Log4j 1.x, and provides
+many of the improvements available in Logback while fixing some inherent problems in Logback's
+architecture.
+
+This is the ${relCount} release of Log4j 2 and is being made available to encourage use and feedback from the community.
 
 ## Hack to improve layout: replace all pairs of spaces with a single new-line
 $release.description.replaceAll("  ", "
@@ -127,6 +130,11 @@ o#if($!issue != "") $issue. #end ${action} #if($!dueto != "")Thanks to $dueto. #
 #end
 ## End of main loop
 #end
+
+Apache Log4j ${relVersion} requires a minimum of Java 5 to build and run. Basic compatibility with
+Log4j 1.x is provided through the log4j-1.2-api component, however it does not implement some of the
+very implementation specific classes and methods. The package names and Maven groupId have been changed to
+org.apache.logging.log4j to avoid any conflicts with log4j 1.x.
 
 For complete information on ${project.name}, including instructions on how to submit bug reports,
 patches, or suggestions for improvement, see the Apache ${project.name} website:
