LOG4J2-199 - Highlight subprojects in sub-navigation.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1465468 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/site/site.vm
+++ b/src/site/site.vm
@@ -180,6 +180,10 @@
 	#if ( $alignedFileName == $currentItemHref )
 	#set ($active = " active")
 	#end
+	#set ( $thisProjectDir = "../${project.artifactId}" )
+	#if ($thisProjectDir == $PathTool.getDirectoryComponent( $item.href ))
+	#set ($active = " active")
+	#end
 	<li class="$collapse$active">
 	#link($currentItemHref $item.name $item.target $item.img $item.position $item.alt $item.border $item.width $item.height )
 	#if ( $item && $item.items && $item.items.size() > 0 )
