--- a/src/site/xdoc/build.xml.vm
+++ b/src/site/xdoc/build.xml.vm
@@ -94,7 +94,7 @@
 <pre class="prettyprint linenums"><![CDATA[
 <dependencies>
   <dependency>
-    <groupId>org.apache.logging.log4j.adapters</groupId>
+    <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j-1.2-api</artifactId>
     <version>${Log4jReleaseVersion}</version>
   </dependency>
@@ -108,7 +108,7 @@
 <pre class="prettyprint linenums"><![CDATA[
 <dependencies>
   <dependency>
-    <groupId>org.apache.logging.log4j.adapters</groupId>
+    <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j-jcl</artifactId>
     <version>${Log4jReleaseVersion}</version>
   </dependency>
@@ -121,7 +121,7 @@
 <pre class="prettyprint linenums"><![CDATA[
 <dependencies>
   <dependency>
-    <groupId>org.apache.logging.log4j.adapters</groupId>
+    <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j-slf4j-impl</artifactId>
     <version>${Log4jReleaseVersion}</version>
   </dependency>
